# C-RAG

./: .gitignore  ADVANCED_REFACTORING.md  CODE_REVIEW.md  LICENSE  PROJECT_STATUS.md  README.md  TEST_REPORT.md  debug_agent.py  pyproject.toml  requirements.txt  results.tex
.github/workflows/: cd.yml  ci.yml
configs/: ablation_no_vector.yaml  ablation_one_shot.yaml  ablation_vector_only.yaml  baseline_graph.yaml  baseline_vector.yaml  crag_full.yaml  crag_full_scale.yaml  crag_mock.yaml  crag_no_rerank.yaml  defaults.yaml  squad_graph.yaml
deploy/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  paper_claim.md
examples/: demo_v2.py
experiments/: DIAGNOSTIC_REPORT.md  analysis_report.md  qualitative_cases.txt  qualitative_cases_v2.txt  reproduce_table1.ps1  rerank_impact.csv  results.tex
paper/: main.tex
scripts/: build_full_kb.py  build_squad_kg.py  build_vectorstore.py  run_ablations.py  run_large_scale_eval.py
src/crag/: run_exp.py
src/crag/agent/: cra.py  state.py
src/crag/analysis/: ablation_analysis.py  analyze_results.py  extract_cases.py  leakage_audit.py  rerank_audit.py  termination_audit.py
src/crag/api/: server.py
src/crag/baselines/: static_graph.py  vector.py
src/crag/common/: exceptions.py
src/crag/data/: __init__.py  dataset_stats.py  kg_format.py  loaders.py  unified_loader.py
tests/: test_suite.py  verify_harness.py
tests/component/: test_retrieval_component.py.disabled
tests/integration/: test_agent_integration.py
tests/system/: test_api_e2e.py.disabled
tests/unit/: test_hrm_unit.py
(+18 files in other folders)
